[package]
name = "arsenalVM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.31"
arsenal-assembler = { path = "./arsenal-assembler" }
strum_macros = "0.25.1"
strum = "0.25.0"
libc = "0.2.147"
